# consta

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
src/: cli.rs  git.rs  lib.rs  main.rs  table.rs
src/model/: commit.rs  mod.rs  repo_stats.rs
